# virtual-bookshelf

./: README.md  pyproject.toml
.github/workflows/: test.yaml
tests/: conftest.py  test_commands.py  test_views.py
virtual_bookshelf/: __init__.py  config.py  database.py  forms.py  views.py
virtual_bookshelf/database/: __init__.py  models.py
virtual_bookshelf/extensions/: appearance.py  forms.py
virtual_bookshelf/extensions/database/: __init__.py  models.py
virtual_bookshelf/static/: style.css
virtual_bookshelf/templates/: add.html  base.html  edit.html  index.html
virtual_bookshelf/templates/components/: notifications.html
virtual_bookshelf/views/: __init__.py  routes.py
