[tool.poetry]
name = "virtual-bookshelf"
version = "0.1.0"
description = "A virtual bookshelf."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "virtual_bookshelf"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
bootstrap-flask = "^2.2.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
mypy = "^1.1.1"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "isort --check --diff . && blue --check --diff . && mypy ."
format = "isort . && blue ."